# h1st-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_dir}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_dir}}/.github/workflows/: ci.yaml
{{cookiecutter.project_dir}}/.lighthouse/jenkins-x/: pullrequest.yaml  release.yaml  triggers.yaml
{{cookiecutter.project_dir}}/.lighthouse/jenkins-x/javascript/: pullrequest.yaml  release.yaml
{{cookiecutter.project_dir}}/.lighthouse/jenkins-x/python/: pullrequest.yaml  release.yaml  release_batch.yaml
{{cookiecutter.project_dir}}/ai/modelers/: README.md
{{cookiecutter.project_dir}}/ai/models/: README.md  config.py  my_ml_model.py
{{cookiecutter.project_dir}}/ai/notebooks/: README.md
{{cookiecutter.project_dir}}/apps/api/: Dockerfile  manage.py  pyproject.toml
{{cookiecutter.project_dir}}/apps/api/config/: urls.py  wsgi.py
{{cookiecutter.project_dir}}/apps/api/h1st_api/: urls.py  views.py
{{cookiecutter.project_dir}}/apps/api/healthcheck/: views.py
{{cookiecutter.project_dir}}/apps/batch_process/: Dockerfile  app.py
{{cookiecutter.project_dir}}/apps/batch_process/tests/: test_app.py
{{cookiecutter.project_dir}}/apps/ui/: Dockerfile  README.md  package-lock.json  package.json  server.js
{{cookiecutter.project_dir}}/apps/ui/nginx/: nginx.conf
{{cookiecutter.project_dir}}/apps/ui/public/: index.html  manifest.json
{{cookiecutter.project_dir}}/apps/ui/src/: App.js
{{cookiecutter.project_dir}}/charts/{{cookiecutter.module_name}}_api/: Chart.yaml  Makefile  README.md  values.yaml
{{cookiecutter.project_dir}}/charts/{{cookiecutter.project_dir}}-api/: Chart.yaml  Makefile  README.md  values.yaml
{{cookiecutter.project_dir}}/charts/{{cookiecutter.project_dir}}-api/templates/: _helpers.tpl  canary.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
{{cookiecutter.project_dir}}/charts/{{cookiecutter.project_dir}}-batch-process/: Chart.yaml  Makefile  README.md  values.yaml
{{cookiecutter.project_dir}}/charts/{{cookiecutter.project_dir}}-batch-process/templates/: _helpers.tpl  cron_job.yaml  hpa.yaml
{{cookiecutter.project_dir}}/charts/{{cookiecutter.project_dir}}-etl/: Makefile  README.md  values.yaml
{{cookiecutter.project_dir}}/charts/{{cookiecutter.project_dir}}-etl/templates/: cron_job.yaml
{{cookiecutter.project_dir}}/charts/{{cookiecutter.project_dir}}-ui/: Chart.yaml  Makefile  README.md  values.yaml
{{cookiecutter.project_dir}}/common/: README.md
{{cookiecutter.project_dir}}/h1st_api/: urls.py  views.py
{{cookiecutter.project_dir}}/h1st_models/: translate.py
{{cookiecutter.project_dir}}/k8s/: {{cookiecutter.project_dir}}-deployments.yaml  {{cookiecutter.project_dir}}-gateway.yaml  {{cookiecutter.project_dir}}-ingress.yaml  {{cookiecutter.project_dir}}-services.yaml
{{cookiecutter.project_dir}}/react-app/: Dockerfile  package-lock.json  package.json
{{cookiecutter.project_dir}}/react-app/public/: index.html
{{cookiecutter.project_dir}}/react-app/src/: App.js
{{cookiecutter.project_dir}}/{{cookiecutter.module_name}}/: settings.py  urls.py  wsgi.py
{{cookiecutter.project_dir}}/{{cookiecutter.module_name}}_api/: Dockerfile  pyproject.toml
{{cookiecutter.project_dir}}/{{cookiecutter.module_name}}_api/config/: urls.py
{{cookiecutter.project_dir}}/{{cookiecutter.module_name}}_api/h1st_api/: urls.py
{{cookiecutter.project_dir}}/{{cookiecutter.module_name}}_api/h1st_models/: translate.py
{{cookiecutter.project_dir}}/{{cookiecutter.module_name}}_api/templates/: redoc.html
{{cookiecutter.project_dir}}/{{cookiecutter.module_name}}_batch_process/: Dockerfile  pyproject.toml
{{cookiecutter.project_dir}}/{{cookiecutter.project_dir}}-etl/: Dockerfile  app.py  pyproject.toml
{{cookiecutter.project_dir}}/{{cookiecutter.project_dir}}-ui/: package.json  server.js
{{cookiecutter.project_dir}}/{{cookiecutter.project_dir}}-ui/public/: index.html
{{cookiecutter.project_dir}}/{{cookiecutter.project_dir}}-ui/src/: App.js  App.test.js
{{cookiecutter.project_dir}}/{{cookiecutter.project_dir}}_batch_process/: Dockerfile  pyproject.toml
(+13 files in other folders)
