[tool.poetry]
name = "{{ cookiecutter.module_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
exclude = ["react-app/*"]

[tool.poetry.dependencies]
python = "^3.8"

h1st = "0.0.3"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"

gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.9.1"
pre-commit = "^2.13.0"
commitizen = "^2.17.11"
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 120

[tool.pylint.design]
max-parents = 15
