[tool.poetry]
name = "fixed-net-etl"
version = "0.1.0"
description = "Furuno Fixed Net - ETL"
authors = [" <>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:main"
