[tool.poetry]
name = "{{ cookiecutter.module_name }}-etl"
version = "{{ cookiecutter.version }}"
description = "{ cookiecutter.project_short_description }} - ETL"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:main"
